Directly call ChunkDemuxer::Initialize completion callback.

ChunkDemuxer posts init_cb while calls DemuxerHost::OnDemuxerError
directly, which creates a race between the two. In some cases if
there is an error right after a successful intialization, the error
will be reported before init_cb has a chance to run which violates
upstream expectations.

BUG=633016

Review-Url: https://codereview.chromium.org/2273273002
Cr-Commit-Position: refs/heads/master@{#423463}

Former-commit-id: 0c4e92a05559f716367fdef9928ae6df0110ff65